[package]
name = "cargo-esr"
version = "0.6.0"
license = "MPL 2.0"
authors = ["Mohammad AlSaleh <CE.Mohammad.AlSaleh@gmail.com>"]
edition = "2018"

[dependencies]
term-string = { git = "https://github.com/rust-alt/term-string.git" }
clap = {version = "2" , features = ["yaml"]}
time = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "0.11"
regex = "1"
lazy_static = "1"
isahc = { version = "1", default_features = false, features = ["http2"]}
smol = "1"
async-trait = "0.1"
futures = "0.3"
fern = "0.6"
chrono = "0.4"
log = "0.4"
crates-index = "0.16"
once_cell = "1"
